# minisql

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml
app/: API.cpp  API.hpp  APIHelpers.cpp  Adapter.cpp  Adapter.h  CMakeLists.txt  Interval.cpp  Interval.h  Util.cpp  Util.h  main.cpp
app/helper/: Condition.cpp  Condition.h  Interval.cpp  Interval.h  PointInterval.h  Util.cpp  Util.h
docs/: API.md  Interpreter.md  Overview.md  README.md
include/api/: API.hpp  Adapter.hpp
include/api/helper/: API_Util.hpp  Condition.hpp  Interval.hpp  InvalidQueryException.hpp  PointInterval.hpp
include/buffer-manager/: Page.h  buffer_manager.h
include/catalog-manager/: Attribute.h  CatalogManager.h  Catalog_Manager.h  catalogPage.h  exception.h  tableInfo.h
include/index-manager/: Index.h  IndexMock.h  Tree.h  TreeNode.h  basic.h  exception.h  template_function.h
include/interpreter/: Interpreter.hpp
include/interpreter/antlr/: SQLBaseVisitor.h  SQLLexer.h  SQLParser.h  SQLVisitor.h
include/interpreter/parser/: Parser.hpp  QueryParser.hpp  SyntaxErrorListener.hpp
include/interpreter/query/: CreateIndexQuery.hpp  CreateTableQuery.hpp  DeleteQuery.hpp  DropIndexQuery.hpp  DropTableQuery.hpp  ExecuteFileQuery.hpp  InsertQuery.hpp  Queries.hpp  Query.hpp  QuitQuery.hpp  SelectQuery.hpp
include/interpreter/type/: Column.hpp  ComparisonCondition.hpp  Literal.hpp
include/interpreter/util/: Util.hpp
include/interpreter/visitor/: SQLCustomVisitor.hpp
include/record-manager/: Attribute.h  RecordManager.h  tableInfo.h  tablePage.h  tuple.h
interpreter/: Interpreter.cpp  minisql.g4
interpreter/antlr4-runtime/: minisqlLexer.cpp  minisqlLexer.h  minisqlLexer.tokens
script/: antlr4.sh  clean.sh  convert-utf8.sh  test.sh
src/: CMakeLists.txt  SQL.g4  main.cpp
src/antlr4-runtime/: SQLLexer.cpp  SQLLexer.h
src/api/: API.cpp  APIHelpers.cpp  Adapter.cpp  CMakeLists.txt  Checking.cpp  Helpers.cpp  IndexRelated.cpp  Selection.cpp
src/api/helper/: API_Util.cpp  Condition.cpp  Interval.cpp  Util.cpp
src/buffer-manager/: CMakeLists.txt  Page.cpp  buffer_manager.cpp
src/catalog-manager/: Attribute.cpp  CMakeLists.txt  CatalogManager.cpp  Catalog_Manager.cpp  catalogPage.cpp  tableInfo.cpp
src/index-manager/: CMakeLists.txt  Index.cpp  IndexMock.cpp
src/interpreter/: CMakeLists.txt  Interpreter.cpp  Interpreter.hpp  SQL.g4  SQLCustomVisitor.hpp
src/interpreter/.antlr/: SQL.interp  SQLLexer.interp  minisqlLexer.interp
src/interpreter/Query/: CreateIndexQuery.hpp  CreateTableQuery.hpp  DeleteQuery.hpp  DropIndexQuery.hpp  DropTableQuery.hpp  ExecuteFileQuery.hpp  InsertQuery.hpp  Queries.hpp  SelectQuery.hpp
src/interpreter/Type/: BinaryOperator.hpp  Column.hpp  ComparisonCondition.hpp  Literal.hpp
src/interpreter/Visitor/: Clause.cpp  Expression.cpp  SQLCustomVisitor.cpp  SmallPart.cpp  Statements.cpp
src/interpreter/antlr/: SQL.interp  SQLBaseVisitor.cpp  SQLLexer.cpp  SQLLexer.h  SQLLexer.interp  SQLLexer.tokens  SQLParser.cpp  SQLParser.h  SQLVisitor.cpp
src/interpreter/antlr4-runtime/: SQL.tokens  SQLBaseVisitor.h  SQLLexer.cpp  SQLLexer.h  SQLParser.cpp  SQLVisitor.cpp
src/interpreter/parser/: Clause.cpp  Expression.cpp  Parser.cpp  QueryParser.cpp  SmallParts.cpp  Statements.cpp
src/interpreter/util/: Util.cpp
src/record-manager/: Attribute.cpp  CMakeLists.txt  RecordManager.cpp  tableInfo.cpp  tablePage.cpp  tuple.cpp
test/: APITest.cpp  CMakeLists.txt  ConditionTest.cpp  InterpreterTest.cpp  test.cpp
test/example-data/: index-create-delete-0.sql  index-create-delete-1.sql  index-create-delete-2.sql  table-create-drop-0.sql  table-create-drop-1.sql  table-create-drop-2.sql  table-insert-delete-0.sql  table-insert-delete-1.sql  table-select-0.sql  table-select-1.sql  test-1000.sql  test-1w.sql
